feat: revoke persistent sessions
